# extensible-celery-worker

./: .bumpversion.cfg  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Pipfile  README.rst  excewo.ini.example  setup.cfg  setup.py  tox.ini
extensible_celery_worker/: __init__.py  __main__.py  celery.py  config_paths.py  excewo.py  flower.py
extensible_celery_worker/examples/: __init__.py  example2_celeryconfig.py  example_celeryconfig.py  tasks.py
tests/: test_celery.py  test_config_paths.py
tests/data/: excewo.ini
