[metadata]
name = extensible_celery_worker
version = 0.2.1
author = Yann Voté
author_email = ygversil@lilo.org
description = Python Celery worker whose registered task list can be extended with plugins
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/ygversil/extensible-celery-worker
project_urls =
    Bug Tracker = https://github.com/ygversil/extensible-celery-worker/issues
classifiers =
    Development Status :: 2 - Pre-Alpha
    License :: OSI Approved :: MIT License
    Environment :: No Input/Output (Daemon)
    Environment :: Plugins
    Intended Audience :: Developers
    Operating System :: OS Independent
    Topic :: System :: Distributed Computing
    Topic :: Scientific/Engineering :: Information Analysis
    Topic :: Software Development :: Libraries :: Python Modules
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages = find:
python_requires = >=3.6
install_requires =
    celery<5.0
    stevedore

[options.extras_require]
flower = flower

[options.packages.find]
exclude =
    tests

[options.data_files]
examples =
    excewo.ini.example

[options.entry_points]
console_scripts =
    excewo = extensible_celery_worker.__main__:main
excewo.tasks =
    examples = extensible_celery_worker.examples.tasks
